--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -1,12 +1,9 @@
 {
-  "extends": "./tsconfig.json",
-  "compilerOptions": {
-    "sourceMap": false,
-    "removeComments": true
-  },
-  "exclude": [
-    "spec",
-    "src/public/",
-    "build.ts"
-  ]
+	"extends": "./tsconfig.json",
+	"compilerOptions": {
+		"sourceMap": false,
+		"removeComments": true,
+		"types": ["fs-extra", "jet-logger" ],
+	},
+	"exclude": ["spec", "src/public/", "build.ts"]
 }
