--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 		"build": "npx ts-node build.ts",
 		"lint": "npx eslint --ext .ts src/",
 		"lint:tests": "npx eslint --ext .ts spec/",
-		"start": "npm i && npm run build && node -r module-alias/register ./dist",
+		"start": "npm run build && node -r module-alias/register ./dist ",
 		"dev": "nodemon",
 		"test": "nodemon --config ./spec/nodemon.json",
 		"test:no-reloading": "npx ts-node --files -r tsconfig-paths/register ./spec"
@@ -28,6 +28,7 @@
 	},
 	"dependencies": {
 		"@ffmpeg-installer/ffmpeg": "^1.1.0",
+		"@types/axios": "^0.14.0",
 		"@types/bcrypt": "^5.0.0",
 		"@types/cookie-parser": "^1.4.3",
 		"@types/find": "^0.2.1",
@@ -43,7 +44,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.52.0",
 		"@typescript-eslint/parser": "^5.52.0",
 		"assert": "^2.0.0",
-		"axios": "^1.3.3",
+		"axios": "^0.21.1",
 		"bcrypt": "^5.1.0",
 		"child_process": "^1.0.2",
 		"cookie-parser": "^1.4.6",
