--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,9 @@
   },
   "rules": {
     "@typescript-eslint/explicit-member-accessibility": "warn",
+		"@typescript-eslint/no-unsafe-member-access": "off",
+		"@typescript-eslint/no-unsafe-call": "off",
+		"@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-misused-promises": 0,
     "@typescript-eslint/no-floating-promises": 0,
     "max-len": [
@@ -22,14 +25,14 @@
         "code": 80
       }
     ],
-    "comma-dangle": ["warn", "always-multiline"],
-    "no-console": 1,
-    "no-extra-boolean-cast": 0,
-    "semi": 1,
-    "indent": ["warn", 2],
-    "quotes": ["warn", "single"],
-    "node/no-process-env": 1,
-    "node/no-unsupported-features/es-syntax": [
+		"comma-dangle": ["warn", "always-multiline"],
+		"no-console": 1,
+		"no-extra-boolean-cast": 0,
+		"semi": [1, "never"],
+		"indent": ["off", 2],
+		"quotes": ["warn", "single"],
+		"node/no-process-env": 1,
+		"node/no-unsupported-features/es-syntax": [
       "error",
       { "ignores" : ["modules"] }
     ],
